@@ -51,6 +51,9 @@ Version 3.0.0?
 
   - Adjust test to use 3 digit exponential values (CPAN bug #59449)
 
+  - Avoid reinstalling driver methods in threads (CPAN bug #83638)
+    [Dagfinn Ilmari Mannsåker]
+
 Version 2.19.3  Released August 21, 2012 (git commit be018f10fdaf4163f98affcb7244046e8f47420d)
 
   - Fix bug in pg_st_split_statement causing segfaults
